Name: propellor-game
Version: 0.0
Cabal-Version: >= 1.8
Maintainer: Oleg Tsibulskyi <alogic0@gmail.com>
Author: Joey Hess <joey@kitenet.net>
Stability: Experimental
Copyright: 2017 Joey Hess
License: AGPL-3
Homepage: 
Category: 
Build-Type: Simple
Synopsis: 
Description:
License-File: AGPL
Extra-Source-Files:

Executable propellor-game
  Main-Is: propellor-game.hs
  GHC-Options: -threaded -Wall -fno-warn-tabs -O0
  Extensions: TypeOperators
  Build-Depends:
      base (>= 4.9 && < 5.0)
    , propellor >= 4.7.6
    , threepenny-gui (== 0.8.0.0)
    , random (>= 1.1)
    , random-shuffle (>= 0.0.4)
    , filepath (>= 1.4)
    , unix (>= 2.7)
    , stm (>= 2.4)
    , async (>= 2.1)
    , process (>= 1.4)
    , directory (>= 1.3)
  Other-Modules:
    Installer.Progress
    Installer.Target
    Installer.Types
    Installer.UI
    Installer.User

